fix: button responsiveness on tablet devices

--- a/core/templates/base-components/base-content.component.css
+++ b/core/templates/base-components/base-content.component.css
@@ -106,3 +106,17 @@
     display: flex !important;
   }
 }
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+  .navbar-container
+    .collapse.d-lg-inline-flex.navbar-collapse.oppia-navbar-collapse.ng-cloak.navbar-options-display
+    nav-options {
+    display: none !important;
+  }
+}
+
+mobile-nav-options
+  oppia-topic-editor-navbar
+  ul.oppia-navbar-desktop.nav.navbar-nav.oppina-navbar-nav.float-right {
+  display: none !important;
+}
